# EG4_MCP_server

./: .env.example  Dockerfile  LICENSE.md  README.md  __init__.py  pyproject.toml  requirements.txt
src/eg4_mcp_server/: __init__.py  server.py
