[project]
name = "eg4-mcp-server"
version = "0.1.0"
description = "An MCP Server for the EG4 Monitoring API, built on https://github.com/matt_dreyer/eg4_inverter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "eg4-python",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
]

[tool.uv.sources]
eg4-python = { path = "../eg4_python" }
