[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eg4-mcp-server"
version = "0.1.0"
description = "Model Context Protocol server for EG4 solar inverter monitoring and control"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Matt Dreyer", email = "matt_dreyer@hotmail.com"}
]
keywords = ["mcp", "solar", "eg4", "inverter", "monitoring", "energy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "eg4-inverter-api",
    "python-dotenv",
    # Add other dependencies from requirements.txt
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/matt-dreyer/EG4_MCP_server"
Repository = "https://github.com/matt-dreyer/EG4_MCP_server"
Issues = "https://github.com/matt-dreyer/EG4_MCP_server/issues"

[project.scripts]
eg4-mcp-server = "eg4_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/eg4_mcp_server"]